Breaking changes (from main code base):
- Miner files are not backwards compatible
- Pool files are not backwards compatible

Changelog NemosMiner 3.9.9.8 Beta3 18.12.2020
=============================================

Miner Updates:
- PhoenixMiner-v5.4c


Changelog NemosMiner 3.9.9.8 Beta2 17.12.2020
=============================================

Changed:
- Pools: Removed obsolete 'protocol' property
- Legacy GUI: Removed all config settings. Use Web GUI instead
- Web GUI: Changed menu item 'Monitoring' to 'Utilities'

Fixed:
- API documentation: Repair broken links
- BMiner API: workaround for broken miner API (https://bitcointalk.org/index.php?topic=2519271.msg55744602#msg55744602)
- NBMiner: Fixed device selection
- Core: Allow 0W power usage readout from miner (and do not loop forever)
- Core: Do not run donation if NemosMiner is started shortly before date change
- Core: Fix watchdog dropping miners if there are many devices mining the same algo / pool
- Core: Idle detection not working
- Core: IgnoreMinerFee not working
- Core: Number of EtcHash pools increasing on each cycle
- Core: Temp fix for broken config file
- EtcHash / Ethash miner terminating while building DAG when CPU mining is active
- MPH / MPHCoins pools: Disable EU EtcHash & Ethash pool (temp fix)
- MPH / MPHCoins pools: Fix pool urls for some algorithms
- Core: Sort miners by 'Earnings' when 'Calculate Power Cost' is disabled
- Web GUI: Breaking config file on save
- Web GUI: Clear Watchdog Timer list when clicking 'Reset Watchdog Timers'
- Web GUI: 'Disable miner' not disabling miner
- Web GUI: Rig Monitor not listing workers
- Web GUI: Miner fees not shown

Improved:
- Blockmasters pool: added support for Asia server
- Changed DAG data provider to "https://minerstat.com/dag-size-calculator" for more supported coins
- Core: Support RVN (KawPow) DAG size calculation
- Core: Detect and ignore unreal hashrate & power usage data from miner (±200% from existing values)