@@ -5,6 +5,9 @@ Breaking changes (from main code base):
 Changelog NemosMiner 3.9.9.8 Beta3 18.12.2020
 =============================================
 
+Improved:
+- Earnings: Predicted Payout date is more accurate
+
 Miner Updates:
 - PhoenixMiner-v5.4c
 
